# bausteine

./: Makefile  pyproject.toml
lego_hub_code/: car.py  hub_direction_based_light_changes.py
src/: circles.py  main.py
src/flask/: circles.py
src/flask_ver1.0/: main.py
src/flask_ver1.0/static/styles/: styles.css
src/project/: app.py
src/project/static/color_resources/: color_resources.csv
src/project/templates/: index.html
src/project/utils/: color_space.py  image.py  main.py  svg.py
src/static/styles/: styles.css
src/templates/: index.html  upload.html
src/utils/: color_picker.py  color_space.py  config.py  image.py  main.py  svg.py
