[tool.poetry]
name = "bausteine"
version = "0.1.0"
description = ""
authors = ["Selim Onat"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
svglib = "^1.5.1"
Flask = "^2.2.3"
numpy = "^1.24.2"
svgwrite = "^1.4.3"
pandas = "^2.2.3"
matplotlib = "3.9"
pybricks = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
